force-app/main/default/objects/Agreement__c/Agreement__c.object-meta.xml
<CustomObject>
    <label>Agreement</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Agreement</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>