force-app/main/default/objects/Agreement__c/fields/Agreement_Link__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Link__c</fullName>
    <label>Agreement Link</label>
    <type>Url</type>
</CustomField>