force-app/main/default/objects/Agreement__c/fields/Authorize_Net_ID__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Net_ID__c</fullName>
    <formula>CC_Authorization__r.Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorize.Net ID</label>
    <type>Text</type>
</CustomField>