force-app/main/default/objects/Agreement__c/fields/CC_Amount__c.field-meta.xml
<CustomField>
    <fullName>CC_Amount__c</fullName>
    <formula>CC_Authorization__r.CC_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>