force-app/main/default/objects/Agreement__c/fields/CC_Authorization__c.field-meta.xml
<CustomField>
    <fullName>CC_Authorization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CC Auth Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Agreements</relationshipLabel>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>