force-app/main/default/objects/Agreement__c/fields/CC_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>CC_Billing_Contact__c</fullName>
    <formula
  >CC_Authorization__r.Billing_Contact_Lookup__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Billing Contact</label>
    <type>Text</type>
</CustomField>