force-app/main/default/objects/Agreement__c/fields/CC_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>CC_Record_ID__c</fullName>
    <formula>CC_Authorization__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CC Record ID</label>
    <type>Text</type>
</CustomField>