force-app/main/default/objects/Agreement__c/fields/Credit_Card_Link__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Link__c</fullName>
    <formula>CC_Authorization__r.Credit_Card_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Card Link</label>
    <type>Text</type>
</CustomField>