force-app/main/default/objects/Agreement__c/fields/Custom_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Custom_Terms_Conditions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Terms &amp; Conditions</label>
    <type>Checkbox</type>
</CustomField>