force-app/main/default/objects/Agreement__c/fields/Discard_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discard_Notes__c</fullName>
    <label>Discard Notes</label>
    <type>TextArea</type>
</CustomField>