force-app/main/default/objects/Agreement__c/fields/Discard_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discard_Reason__c</fullName>
    <label>Discard Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Signed via Hardcopy Signature - no eSign</fullName>
            </value>
            <value>
                <fullName>Sent Hardcopy PO in Lieu of eSign</fullName>
            </value>
            <value>
                <fullName>Agency IO sent instead of client signature</fullName>
            </value>
            <value>
                <fullName>Changed Products</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Amount changed</fullName>
                <isActive>false</isActive>
                <label>Amount changed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>