force-app/main/default/objects/Agreement__c/fields/Email_Cc__c.field-meta.xml
<CustomField>
    <fullName>Email_Cc__c</fullName>
    <label>Email Cc</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>