force-app/main/default/objects/Agreement__c/fields/Email_Message__c.field-meta.xml
<CustomField>
    <fullName>Email_Message__c</fullName>
    <inlineHelpText
  >Custom message sent to the client along with contract link for signature</inlineHelpText>
    <label>Email Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>