force-app/main/default/objects/Agreement__c/fields/Link_to_PDF__c.field-meta.xml
<CustomField>
    <fullName>Link_to_PDF__c</fullName>
    <label>Link to PDF</label>
    <type>Url</type>
</CustomField>