force-app/main/default/objects/Agreement__c/fields/Sales_Admin__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Agreements</relationshipName>
    <type>Lookup</type>
</CustomField>