force-app/main/default/objects/Agreement__c/fields/Sales_Admin_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>Sales_Admin_is_Current_User__c</fullName>
    <formula>IF($User.Id =  Sales_Admin__r.Id, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Admin is Current User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>