force-app/main/default/objects/Agreement__c/fields/Sales_Team__c.field-meta.xml
<CustomField>
    <fullName>Sales_Team__c</fullName>
    <description>The Sales Team that currently owns the account</description>
    <formula>Account__r.Sales_Team_Formula__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText
  >The Sales Team that currently owns the account</inlineHelpText>
    <label>Sales Team</label>
    <type>Text</type>
</CustomField>