force-app/main/default/objects/Agreement__c/fields/Saved_Progress__c.field-meta.xml
<CustomField>
    <fullName>Saved_Progress__c</fullName>
    <description
  >supports the  &apos;save progress&apos; button on the sign agreement page.  all fields are saved in json</description>
    <inlineHelpText>DO NOT EDIT</inlineHelpText>
    <label>Saved Progress</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>