force-app/main/default/objects/Agreement__c/fields/Signed_By__c.field-meta.xml
<CustomField>
    <fullName>Signed_By__c</fullName>
    <label>Signed By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>