force-app/main/default/objects/Agreement__c/fields/Unsigned_PDF__c.field-meta.xml
<CustomField>
    <fullName>Unsigned_PDF__c</fullName>
    <label>Unsigned PDF</label>
    <type>Url</type>
</CustomField>