force-app/main/default/objects/Agreement__c/recordTypes/Agreements_Locked.recordType-meta.xml
<RecordType>
    <fullName>Agreements_Locked</fullName>
    <active>true</active>
    <label>Agreements - Locked</label>
</RecordType>