force-app/main/default/objects/Agreement__c/recordTypes/Agreements_Unlocked.recordType-meta.xml
<RecordType>
    <fullName>Agreements_Unlocked</fullName>
    <active>true</active>
    <label>Agreements - Unlocked</label>
</RecordType>