force-app/main/default/objects/Agreement__c/validationRules/Discard_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Discard_Reason_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(  Status__c , &quot;Discarded&quot;), 
ISBLANK( TEXT( Discard_Reason__c )) 
)</errorConditionFormula>
    <errorDisplayField>Discard_Reason__c</errorDisplayField>
    <errorMessage
  >If the Status is &quot;Discarded&quot;, then the field &quot;Discard Reason&quot; is required.</errorMessage>
</ValidationRule>