force-app/main/default/objects/Agreement__c/validationRules/If_Discard_Reason_Other_Must_Add_Note.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Discard_Reason_Other_Must_Add_Note</fullName>
    <active>true</active>
    <errorConditionFormula
  >AND(ISPICKVAL( Discard_Reason__c , &quot;Other&quot;), 
ISBLANK( Discard_Notes__c ))</errorConditionFormula>
    <errorDisplayField>Discard_Notes__c</errorDisplayField>
    <errorMessage
  >&quot;Discard Notes&quot; field required if the discard reason is &quot;Other&quot;</errorMessage>
</ValidationRule>