force-app/main/default/objects/Agreement__c/listViews/Discarded.listView-meta.xml
<ListView>
    <fullName>Discarded</fullName>
    <columns>NAME</columns>
    <columns>Discard_Reason__c</columns>
    <columns>Discard_Notes__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Agreement_Link__c</columns>
    <columns>Unsigned_PDF__c</columns>
    <columns>Link_to_PDF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Discarded</value>
    </filters>
    <label>Discarded</label>
</ListView>