force-app/main/default/objects/Agreement__c/listViews/My_Agreements_This_Week.listView-meta.xml
<ListView>
    <fullName>My_Agreements_This_Week</fullName>
    <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
    <columns>Account__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Amount__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Discarded</value>
    </filters>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>Sales_Rep_is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Sales_Admin_is_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Agreements - This Week</label>
</ListView>