force-app/main/default/objects/Agreement__c/listViews/Out_for_Signature.listView-meta.xml
<ListView>
    <fullName>Out_for_Signature</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Agreement_Link__c</columns>
    <columns>Unsigned_PDF__c</columns>
    <columns>Link_to_PDF__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Out for Signature</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <label>Out for Signature</label>
</ListView>