force-app/main/default/objects/Agreement__c/listViews/printed.listView-meta.xml
<ListView>
    <fullName>printed</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Agreement_Link__c</columns>
    <columns>Unsigned_PDF__c</columns>
    <columns>Link_to_PDF__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Printed</value>
    </filters>
    <label>printed</label>
</ListView>